# paygo-portal

./: LICENSE  README.md  TODO.md  start.sh
angular/: Dockerfile  README.md  application-schema.ts  package-lock.json  package.json
angular/web-browser-client-angular/: angular.json  custom-webpack.config.js  package-lock.json  package.json
apisix/: Dockerfile  README.md  apisix.ejs
authentication-api/: Dockerfile  README.md  package.json
compile-time-tools/: Cargo.toml
docker/: README.md
docs/: api-and-psql.md
generator-functions/: README.md
json-schema-validator/: Cargo.toml  application-schema.json
json-schema-validator/schemas/: action-schema.json  application-schema.json  tool-schema.json
node-ts/: Dockerfile  README.md  package-lock.json  package.json
node-ts/src/: index.ejs  index.ts
phone-application/: Dockerfile  README.md  package-lock.json  package.json
react-js/: .gitignore  Dockerfile  README.md  package-lock.json  webpack.config.js
restful-api/: package-lock.json  package.json
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  run.sh
rust/package/: package.json  rust.d.ts  rust.js  rust_bg.wasm  rust_bg.wasm.d.ts
rust/src/: lib.rs  main.rs
static-web-server/: Dockerfile  index.html  pod.yaml
static_web_server/: Dockerfile
twig/: Dockerfile  README.md  main.php
vue/: package-lock.json  package.json
web-browser/: Dockerfile  README.md  package.json  webpack.config.js
web-project/: .gitignore  Dockerfile  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
(+17 files in other folders)
