[package]
name = "compile-time-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode-generator = "4.1.9"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-pack = "0.12.1"
wasm-bindgen = "0.2"

